# navgator

./: AGENTS.md  Cargo.toml  README.md  config-schema.json
.github/workflows/: release.yml
.homebrew/: navgator.rb
docs/: action-bindings-spec.md  action-picker-spec.md  config-behavior-spec.md  create-flow-spec.md
scripts/: navgator.zsh
src/: commands.rs  compositor.rs  config.rs  content.rs  git.rs  github.rs  keybindings.rs  main.rs  metadata.rs  model.rs  provider_runtime.rs  results.rs  search.rs  tags.rs  ui.rs
