[package]
name = "navgator"
version = "0.1.1"
edition = "2021"
description = "🐊 Rust TUI project navigator with Git worktree and preview support"
license = "MIT"
repository = "https://github.com/Yarden-zamir/navgator"
keywords = ["tui", "ratatui", "git", "worktree", "cli"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
ansi-to-tui = "8.0"
crossterm = "0.29"
figment = { version = "0.10", features = ["toml"] }
gator = { git = "https://github.com/Yarden-zamir/gator", tag = "v0.1.0" }
libc = "0.2"
ratatui = "0.30"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = { version = "0.15", features = ["crossterm"] }
